--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="lib/p5.js"></script>
     <script src="lib/p5.dom.js"></script>
     <script src="lib/p5.sound.js"></script>
+    <script src="token.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
